--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+a:hover {
+    text-decoration: none;
+}
+
 .nav-row {
     position: absolute;
     z-index: 99;
@@ -27,15 +31,43 @@
 }
 
 
+
+.right-side-nav {
+    display: flex;
+    justify-content: flex-end;
+    width: 55%;
+    align-items: center;
+    align-content: center;
+}
+
+.right-side-nav .trailer {
+    font-size: 18px;
+    padding: 5px 10px;
+    margin-right: 20px;
+    border: 2px solid white;
+
+}
+
+.navbar-toggler-icon {
+    margin-left: 30px;
+}
+
+.navbar-dark .navbar-toggler {
+    border: none;
+    outline: none;
+}
+
 .our-films {
     margin-top: 100px;
     margin-bottom: 100px;
 }
 
 
+
 .our-films .container-fluid {
     padding-left: 10%;
     padding-right: 10%;
+ 
 }
 
 .kino-posts .container-fluid {
@@ -48,15 +80,18 @@
     padding-right: 10%;
 }
 
+
 .form-container {
     display: flex;
     justify-content: space-between;
+    margin-top: 75px;
    
 }
 
 .form-container  figure {
-    max-width: 500px;
+    max-width: 550px;
     max-height: 450px;
+    margin: 0;
 }
 
 .about .container-fluid {
@@ -97,10 +132,6 @@ img {
 }
 
 
-img {
-    max-width: 1920px;
-    max-height: 1080px;
-}
 
 .slide-films {
     margin-top: 0;
@@ -108,15 +139,8 @@ img {
 
 
 
-
-
-
-.carousel-inner img {
-    max-height: 1080px;
-}
-
 .carousel-caption {
-    bottom: 10%;
+    bottom: 15%;
     left: 5%;
     right: auto;
     text-align: left;
@@ -139,13 +163,25 @@ img {
         font-weight: bold;
         text-transform: uppercase;
         font-family: 'Helvetica';
+        margin-bottom: 0;
       
 }
 
 .film-date {
-    margin-bottom: 30px;
+    margin-bottom: 5px;
     font-weight: 600;
     font-size: 25px;
+}
+
+
+.sub-title-small {
+    margin-bottom: 25px;
+    font-size: 20px;
+    margin-top: -5px;
+}
+
+.text-center {
+    font-size: 20px;
 }
 
 
@@ -165,15 +201,36 @@ img {
     color: #000;
 }
 
+.blog-row {
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
 
+.blog-row .our-films {
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
 
 .kino-posts {
     margin-top: 50px;
     margin-bottom: 50px;
 }
 
+.date {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.kino-posts .post-thumb {
+    height: 230px;
+}
+
+.kino-posts .post-thumb img {
+    height: 100%;
+}
+
 .sect-title {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .sect-title h2 {
@@ -205,7 +262,7 @@ img {
 }
 
 main {
- min-height: 70vh;
+ min-height: 100vh;
 }
 
 .blog > .container-fluid {
@@ -213,10 +270,7 @@ main {
  padding-right: 10%;
 }
 
-.blog-row {
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
+
 
 .single-post {
     margin-bottom: 30px;
@@ -228,7 +282,7 @@ main {
 .blog-row h2 {
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     font-size: 45px;
 }
 
@@ -261,6 +315,7 @@ footer .container-fluid {
 
 footer a {
     display: block;
+    color: #fff;
 }
 
 .contacts {
@@ -282,14 +337,28 @@ footer .label {
 }
 
 
-.modal-content {
-   height: 500px;
-   width: 900px;
+.modal {
+    padding-left: 17px;
 }
 
-.modal-body {
+.yt-player .modal-content {
+   height: 600px;
+   width: 900px;
+   outline: none;
+    border: none;
+    background: #0000;
+}
+
+.yt-player .modal-body {
     width: 100%;
     padding: 0;
+    height: 500px;
+}
+
+.yt-player .modal-header button {
+    color: #fff;
+    opacity: 1;
+
 }
 
 .post-thumb {
@@ -301,19 +370,25 @@ footer .label {
     box-shadow: 0px 10px 38px 0px rgba(0,0,0,0.18);
 }
 
+.our-films-inner {
+    display: flex;
+}
+
+.our-films-inner .post-thumb img {
+    height: 480px;
+    margin-top: 25px;
+}
+
 .our-films .post-thumb img {
-height: 480px;
+height: 440px;
 
 }
 
-.kino-posts .post-thumb img {
-    height: 250px;
-  
-}
+
 
 section {
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 
@@ -337,70 +412,340 @@ section {
 }
 
 
-
 .sub-menu li a {
     font-size: 20px;
 }
 
+.modal-form .modal-dialog {
+    max-width: 450px;
+
+}
+
+
+.nav li {
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+
+.wpcf7-submit {
+    background: #fff;
+    border: 1px solid black;
+    border-radius: 30px;
+    padding: 5px 15px;
+    cursor: pointer;
+}
+
+.label-for-file {
+    border: 1px solid black;
+    border-radius: 30px;
+    padding: 5px 15px;
+    width: 230px;
+    cursor: pointer;
+    text-align: center;
+
+}
+
+.file-input {
+    display: none;
+}
+
+.wpcf7-text {
+    border: none;
+    border-bottom: 1px solid;
+}
+
+.wpcf7-text :active, :hover, :focus {
+    outline: 0;
+    outline-offset: 0;
+}
+
+.modal-header {
+    border-bottom: none;
+    padding: 10px;
+}
+
+.modal-content {
+    border-radius: 0;
+}
+
+.modal-content {
+    padding: 10px;
+}
+
+.history img {
+    width: 100%;
+    max-width: 550px;
+    height: auto;
+}
+
+.dress .main-title {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 45px;
+}
+
+.form-photo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dressFigure {
+    height: 100%;
+}
+
+.dress-img-container {
+    padding: 20px;
+}
+
+.dress .container-fluid {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.text-content {
+    display: none;
+}
+
+.desctop-modal-picture {
+    position: relative;
+}
+
+
+.link-commertial-modal {
+    position: absolute;
+    left: 23%;
+    bottom: 10%;
+    
+}
+
+
+.main-404 {
+    min-height: 50vh;
+}
+
+.sect-404 {
+    height: 80vh;
+}
+
+.sect-404 > .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 100%;
+}
+
+.title-404 {
+    font-size: 27px;
+}
+
+.number-404 {
+    font-size: 9rem;
+    font-weight: bold;
+}
+
+
+
+
 
 @media (min-width: 576px) {
-.modal-dialog {
+    .yt-player .modal-dialog {
     max-width: 900px;
     margin: 1.75rem auto;
 
 }
+}
+
+
+
+@media (min-width: 1009px)  {
+    .film-post .carousel-inner {
+        height: 600px;
+        width: 992px;
+    }
+
+    .film-post .carousel-item {
+        height: 100%;
+    }
+
+    .carousel-inner img {
+        height: 100%;
+
+    }
+
+}
+
+@media (min-width: 767px) and (max-width: 1009px) {
+    .film-post .carousel-inner {
+        height: 450px;
+        width: 100%;
+    }
+
+    .film-post .carousel-item {
+        height: 100%;
+    }
+
+}
+
+
+@media (min-width: 0px) and (max-width: 440px) {
+
+    .carousel-control-next-icon, .carousel-control-prev-icon {
+        width: 40px;
+        height: 40px;
+    
+    }
+
+
+
+    .wpcf7-text {
+        width: 200px;
+    }
+
+    .wpcf7-textarea {
+        width: 100%;
+    }
+
+    .navbar-toggler-icon {
+        margin-left: 0;
+    }
+
+    .modal {
+        padding-left: 5px;
+        padding-right: 5px !important;
+    }
+    
 
 
 
 }
 
-@media (min-width: 0px) and (max-width: 1500px) {
+
+@media (min-width: 1300px) and (max-width: 1500px) {
     .our-films .post-thumb img  {
-       height: auto;
+       height: 320px;
+    }
+}
+
+    
+
+@media (min-width: 992px) and (max-width: 1300px) {
+    .our-films .post-thumb img  {
+       height: 280px;
     }
     
     }
+
+    @media (min-width: 1400px) and (max-width: 1600px) {
+        .kino-posts .post-thumb {
+            height: 200px;
+        }        
+    }
+
+    @media (min-width: 992px) and (max-width: 1400px) {
+        .kino-posts .post-thumb {
+            height: 150px;
+        }        
+    }
+
 
 
 
 
     @media (min-width: 0px) and (max-width: 1120px) {
         .our-films .post-thumb img  {
-           height: auto;
+           height: 250px;
         }
 
-        .kino-posts .post-thumb img {
-            height: auto;
+
+        .post-thumb {
+            margin: 10px;
         }
 
-      
-
-
-        .modal-content {
-            width: 100%;
-           max-width: 500px;
-        }
-        
         
         
         
         }
 
+
+        @media (min-width: 0px) and (max-width: 992px) {
+            .our-films .post-thumb img  {
+                height: auto;
+             }
+
+             .kino-posts .post-thumb img  {
+                height: 100%;
+             }
+
+             .kino-posts .post-thumb  {
+                height: auto;
+             }
+
+
+             .history h2 {
+                 margin-top: 20px;
+             }
+
+             .contacts {
+                 text-align: left;
+             }
+
+
+        }
+
         
 
-        @media (min-width: 0px) and (max-width: 1250px) {
+        @media (min-width: 995px) and (max-width: 1250px) {
 
-            
-.post-thumb {
-    margin: 10px;
-}
+
+            .history img {
+                max-height: 600px;
+            }
+
             
             
             }
 
+            @media (min-width: 0px) and (max-width: 750px) {
+
+                .right-side-nav {
+                    margin: 0;
+                }
+    
+                .right-side-nav li {
+                    display: none;
+                }
+
+                .text-content {
+                    display: block;
+                    
+                }
+
+                .commertial .modal-body {
+                    background: #fff;
+                }
+
+                .desctop-modal-picture,  .link-commertial-modal{
+                    display: none;
+                }
+
+                .body-content {
+                    padding: 5%;
+                    background: #fff;
+                }
+                
+    
+
+
+            }
+
+
         @media (min-width: 0px) and (max-width: 600px) {
 
-            .carousel-caption {
+            .slide-films .carousel-caption {
                 position: static;
                 right: 0;
                 bottom: 0;
@@ -408,6 +753,46 @@ section {
                 color: #000;
                 padding: 35px 25px 35px 25px;
             }
+
+          .slide-films .carousel-inner{
+                height: 550px;
+            }
+
+            .right-side-nav {
+                display: block;
+                width: auto;
+            }
+
+
+            .slide-films .carousel-control-next-icon {
+                background-image: url(img/right-chevron.png) !important;
+            }
+
+            .slide-films .carousel-control-prev-icon {
+                background-image: url(img/left-chevron.png) !important;
+            }
+
+            .slide-films .carousel-control-next,
+            .carousel-control-prev {
+                opacity: 1;
+            }
+
+            .slide-films  .carousel-control-next-icon,
+            .slide-films .carousel-control-prev-icon {
+                width: 40px;
+                height: 40px;
+
+            }
+
+            .slide-films  .carousel-control-next, .slide-films  .carousel-control-prev {
+                bottom: 28%;
+            }
+
+            footer h2 {
+                font-size: 25px;
+            }
+
+       
             
             
 
@@ -438,7 +823,7 @@ section {
                 color: #fff;
             }
 
-            .carousel-inner {
+            .slide-films .carousel-inner {
                 -webkit-box-shadow: 0px 0px 52px 1px rgba(0,0,0,0.09);
 -moz-box-shadow: 0px 0px 52px 1px rgba(0,0,0,0.09);
 box-shadow: 0px 0px 52px 1px rgba(0,0,0,0.09);
@@ -449,6 +834,8 @@ box-shadow: 0px 0px 52px 1px rgba(0,0,0,0.09);
             }
 
         }
+
+   
             
         
 
